Added discovery of devices via lpinfo & Printer Applications

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ gio_unix2_dep = dependency ('gio-unix-2.0', version : glib2_req)
 gobject2_dep = dependency ('gobject-2.0', version : glib2_req)
 polkit_dep = dependency ('polkit-gobject-1', version : '>= 0.97')
 cups_dep = dependency ('cups', version : '>= 1.6')
+pappl_dep = dependency ('pappl', version : '>=1.0')
 
 subdir ('po')
 subdir ('src')
